[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["duduru <hgalytoby@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.114.1"
uvicorn = { extras = ["standard"], version = "^0.30.5" }
fastapi-async-sqlalchemy = "^0.5.0"
sqlmodel = "^0.0.21"
fastapi-users = "^13.0.0"
fastapi-pagination = "^0.12.26"
asyncpg = "^0.29.0"
httpx-oauth = "^0.15.0"
fastapi-mail = "^1.4.1"
redis = "^5.0.8"
fastapi-users-db-sqlmodel = "^0.3.0"
alembic = "^1.10.3"
fastapi-restful = {extras = ["all"], version = "^0.6.0"}
pillow = "^9.5.0"
aiopath = "^0.6.11"
pyhumps = "^3.8.0"
gcloud-aio-storage = "^8.2.0"
qrcode = "^7.4.2"
orjson = "^3.10.6"
gunicorn = "^22.0.0"
sqlalchemy-utils = "^0.41.1"
arq = "^0.25.0"
fastapi-debug-toolbar = "^0.6.3"
bcrypt = "4.1.2"
pydantic = "^2.8.2"
pydantic-settings = "^2.4.0"
broadcaster = {extras = ["redis"], version = "^0.3.1"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "0.21.1"
pytest-mock = "^3.12.0"
pytest-env = "^1.1.3"
asgi-lifespan = "^2.1.0"
ruff = "^0.2.2"
coverage = "^7.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 80

[tool.ruff.lint.isort]
order-by-type = true
case-sensitive = true
combine-as-imports = true
force-wrap-aliases = true
from-first = true

[tool.ruff.lint]
select = [
    "I",
    "PT",
    "RET505",
    "RET506",
    "RET507",
    "RET508",
    "SIM",
    "PLR5501",
    "PLR1714",
    "PLR1701",
]
ignore = []

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 80
quote-style = "single"

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
parametrize-names-type = "csv"
parametrize-values-row-type = "tuple"
parametrize-values-type = "list"
mark-parentheses = false

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

